kustomize/lazylibrarian/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lazylibrarian
  labels:
    goldilocks.fairwinds.com/enabled: "true"
