kustomize/lazylibrarian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  # annotations:
    # tailscale.com/expose: "true"
    # tailscale.com/hostname: "lazylibrarian"
  labels:
    app: lazylibrarian
spec:
  ports:
    - port: 5299
      name: default
      targetPort: 5299
      protocol: TCP
    - port: 443
      name: tailscale
      targetPort: 5299
      protocol: TCP
  selector:
    app: lazylibrarian
