kustomize/lazylibrarian/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lazylibrarian-tailscale
spec:
  defaultBackend:
    service:
      name: lazylibrarian
      port:
        number: 80
  ingressClassName: tailscale
  # tls:
  # - hosts:
  #   - lazylibrarian
